welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: value num
 	var num1 = num(0);
                   ^noTriples:3: error: not found: value num
  var num2 = num(1);
             ^noTriples:4: error: not found: value num
  var num3 = num(2);
             ^noTriples:6: error: not found: value num
  for (i<-3 to num.length-1){num1=num2;num2=num3;num3=nums(i);if (num1==num2 && num2==num3){return false}}
               ^