welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
 	var num1 = num(0);
  var num2 = num(1);
  var num3 = num(2);
  if (num1==num2 && num2==num3){return false}
  for (i<-3 to nums.length-1){num1=num2;num2=num3;num3=nums(i);if (num1==num2 && num2==num3){return false}}
  return true}